code/projectHPC/cache
  File "merge.py", line 14
    except:
         ^
SyntaxError: invalid syntax
